--- a/dist.ini
+++ b/dist.ini
@@ -25,11 +25,7 @@ format = %v %{yyyy-MM-dd HH:mm:ss}d
 
 [MetaConfig]
 [MetaJSON]
-[MetaResources]
-repository.web = https://github.com/ology/Perl-Metrics-Halstead
-repository.type = git
-bugtracker.mailto = bug-Perl-Metrics-Halstead@rt.cpan.org
-bugtracker.web    = https://rt.cpan.org/Public/Dist/Display.html?Name=Perl-Metrics-Halstead
+[GithubMeta]
 
 [Test::PodSpelling]
 wordlist = Pod::Wordlist
