I guess we do want MinimumPerl

--- a/dist.ini
+++ b/dist.ini
@@ -5,6 +5,7 @@ copyright_holder = Gene Boggs
 copyright_year   = 2019
 
 [VersionFromModule]
+[MinimumPerl]
 [AutoPrereqs]
 
 [CheckChangesHasContent]
