--- a/dist.ini
+++ b/dist.ini
@@ -1,8 +1,8 @@
 name    = Perl-Metrics-Halstead
-author  = Gene Boggs <gene@cpan.org>
+author  = Gene Boggs <gene.boggs@gmail.com>
 license = Perl_5
 copyright_holder = Gene Boggs
-copyright_year   = 2022
+copyright_year   = 2019-2025
 
 [VersionFromModule]
 [MinimumPerl]
